edited some styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,3 +70,15 @@ button{
 button:hover{
     opacity: 1;
 }
+
+@media screen and (max-width: 768px){
+    header, .events{
+        width: 400px;
+    }
+}
+
+@media screen and (max-width: 400px){
+    header,.events{
+        width: 300px;
+    }
+}
